# kivy_app

./: README.md  cache.json  main.py  main.spec  pyproject.toml  relize  temp  temp 22.07  temp 2307  temp 2507  temp 2907  temp3  temp_project  еуьз2
