[tool.poetry]
name = "kivy-app"
version = "0.1.0"
description = ""
authors = ["saatarko <saatar@tut.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Kivy = "^2.3.0"
websockets = "^12.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
